--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "gulp-replace": "^0.5.2",
     "gulp-rev-all": "^0.8.13",
     "gulp-sort": "^1.0.1",
-    "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-usemin": "^0.3.11",
     "gulp-util": "^3.0.2",
@@ -54,6 +53,7 @@
     "chalk": "^1.0.0",
     "compression": "^1.4.0",
     "cookie-parser": "^1.3.3",
+    "gulp-less": "^3.0.3",
     "hapi": "*",
     "lodash": "^3.8.0",
     "method-override": "^2.3.1",
