--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "chalk": "^1.0.0",
     "compression": "^1.4.0",
     "cookie-parser": "^1.3.3",
-    "hapi": "*",
+    "hapi": "^8.0.0",
     "lodash": "^3.8.0",
     "method-override": "^2.3.1",
     "swig": "^1.4.2"
